--- a/projects.json
+++ b/projects.json
@@ -8,6 +8,15 @@
 			"Src": "https://github.com/beego/beeweb",
 			"Submitter": "slene",
 			"Date": "2013-12-22"
+		},
+		{
+    		"Name": "Outcast",
+    		"Thumb": "outcast/thumb.png",
+    		"Desc": "Stay Ahead Of Mother Nature",
+   		 	"Url": "http://www.OutCast.io",
+   		 	"Src": "",
+    		"Submitter": "Ardan Studios",
+    		"Date": "2013-12-23"
 		}
 	]
 }
