--- a/projects.json
+++ b/projects.json
@@ -56,7 +56,7 @@
         },
         {
               "Name": "360 Open Search",
-              "Thumb": "360opensearch/360.jpg",
+              "Thumb": "360opensearch/logo.jpg",
               "Desc": "基于Beego的API开发，360搜索开放平台，提供企业级搜索合作支持",
               "Url": "http://www.so.com",
               "Src": "",
