--- a/projects.json
+++ b/projects.json
@@ -89,6 +89,15 @@
 			"Src": "",
 		    "Submitter": "fanngyuan",
 		    "Date": "2013-12-22"
+		},
+		{
+		    "Name": "Buzzinsights", 
+			"Thumb": "buzzinsights/thumb.jpg",
+		    "Desc": "buzzinsights 微博数据接口等", 
+		    "Url": "http://buzzinsights.buzzreader.cn/",
+			"Src": "",
+		    "Submitter": "tony.shao", 
+		    "Date": "2013-12-22"
 		}
  ]
 }
