add oupengimage to products

--- a/projects.json
+++ b/projects.json
@@ -107,6 +107,15 @@
 			"Src": "",
 		    "Submitter": "tony.shao", 
 		    "Date": "2013-12-22"
+		},
+		{
+		    "Name": "OupengImage",
+			"Thumb": "oupengimage/thumbnail.png",
+		    "Desc": "基于beego开发的图片存储服务",
+		    "Url": "http://oupeng.com/",
+			"Src": "",
+		    "Submitter": "Pengfei.X",
+		    "Date": "2014-01-15"
 		}
  ]
 }
