--- a/projects.json
+++ b/projects.json
@@ -152,6 +152,15 @@
             "Src": "https://github.com/UlricQin/beego-blog",
             "Submitter": "UlricQin",
             "Date": "2014-05-11"
+        },
+	{
+            "Name": "Biandanrong",
+            "Thumb": "biandanrong/thumb.jpg",
+            "Desc": "基于beego开发的投融资平台",
+            "Url": "http://www.biandanrong.com/",
+            "Src": "",
+            "Submitter": "ace7",
+            "Date": "2014-09-12"
         }
  ]
 }
