--- a/projects.json
+++ b/projects.json
@@ -163,7 +163,7 @@
             "Date": "2014-09-12"
         },
         {
-            "Name": "YouGam社区",
+            "Name": "YouGam轻量级社区系统",
             "Thumb": "yougam/thumb.png",
             "Desc": "基于reddit投票与v2ex概念设计的轻量级社区",
             "Url": "http://www.yougam.com/",
