--- a/projects.json
+++ b/projects.json
@@ -197,6 +197,15 @@
             "Src": "",
             "Submitter": "insion",
             "Date": "2014-09-12"
+        },
+        {
+            "Name": "腾讯游戏CF枪王排位",
+            "Thumb": "cf/cf.png",
+            "Desc": "腾讯游戏CF枪王排位：约战系统",
+            "Url": "http://cf.qq.com/rank/duel.shtml",
+            "Src": "",
+            "Submitter": "danghf",
+            "Date": "2014-09-13"
         }
  ]
 }
