--- a/projects.json
+++ b/projects.json
@@ -161,6 +161,15 @@
             "Src": "",
             "Submitter": "ace7",
             "Date": "2014-09-12"
+        },
+        {
+            "Name": "mycomputer",
+            "Thumb": "mycomputer/thumb.png",
+            "Desc": "基于beego开发的收藏者网站",
+            "Url": "http://mycomputer.xyz/",
+            "Src": "https://github.com/tobegit3hub/mycomputer",
+            "Submitter": "tobe",
+            "Date": "2014-09-22"
         }
  ]
 }
