--- a/projects.json
+++ b/projects.json
@@ -264,7 +264,7 @@
         {
             "Name": "好卖进销存",
             "Thumb": "sellgood/thumb.jpg",
-            "Desc": "个体经营者的进销存统计系统.",
+            "Desc": "个体经营者的进销存统计系统",
             "Url": "http://www.deruv.com",
             "Src": "",
             "Submitter": "deruv",
