--- a/projects.json
+++ b/projects.json
@@ -260,6 +260,15 @@
             "Src": "",
             "Submitter": "dbriemann",
             "Date": "2015-04-26"
+        },
+        {
+            "Name": "Seagull",
+            "Thumb": "seagull/thumb.png",
+            "Desc": "Friendly Web UI to monitor docker daemon.",
+            "Url": "http://dockerseagull.com",
+            "Src": "https://github.com/tobegit3hub/seagull",
+            "Submitter": "tobe",
+            "Date": "2015-05-01"
         }
     ]
 }
