add Teamkey project

--- a/projects.json
+++ b/projects.json
@@ -278,6 +278,15 @@
             "Src": "",
             "Submitter": "deruv",
             "Date": "2015-05-03"
+        },
+        {
+            "Name": "Teamkey",
+            "Thumb": "teamkey/thumb.png",
+            "Desc": "Password manager for IT teams",
+            "Url": "https://teamkey.guru",
+            "Src": "",
+            "Submitter": "smile42ru",
+            "Date": "2015-05-28"
         }
     ]
 }
