--- a/projects.json
+++ b/projects.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "Projects": [
         {
             "Name": "Beego Web",
@@ -305,6 +305,15 @@
             "Src": "",
             "Submitter": "virago80",
             "Date": "2016-04-16"
+        },
+        {
+            "Name": "金薇网站",
+            "Thumb": "kiviebra/thumb.jpg",
+            "Desc": "基于beego构建的整站！",
+            "Url": "http://www.kiviebra.cc",
+            "Src": "",
+            "Submitter": "xjjrocker",
+            "Date": "2016-05-15"
         }
     ]
 }
