--- a/projects.json
+++ b/projects.json
@@ -305,6 +305,16 @@
             "Src": "",
             "Submitter": "virago80",
             "Date": "2016-04-16"
+        },
+        {
+            "Name": "免费微信公众号社区-果真社区",
+            "Thumb": "84u6/84u6.png",
+            "Desc": "为微信公众号提供最佳粉丝互动解决方案",
+            "Url": "http://shequ.84u6.com/",
+            "Src": "",
+            "Submitter": "yaotian",
+            "Date": "2016-05-16"
         }
+
     ]
 }
