--- a/projects.json
+++ b/projects.json
@@ -359,7 +359,15 @@
             "Src": "",
             "Submitter": "TOON Kikaku",
             "Date": "2016-07-14"
-        } 
-
+        },
+        {
+            "Name": "22v web",
+            "Thumb": "22v/thumb.png",
+            "Desc": "22v.net 网站湃码",
+            "Url": "https://22v.net/",
+            "Src": "https://github.com/zituocn/22v",
+            "Submitter": "Sam",
+            "Date": "2016-08-21"           
+        }
     ]
 }
