--- a/projects.json
+++ b/projects.json
@@ -377,6 +377,15 @@
         	"Src": "https://github.com/29392964/mgweb", 
         	"Submitter": "Sec",
         	"Date": "2016-08-29"
-	}
+		},
+		{
+        	"Name": "CMS", 
+        	"Thumb": "cms/cms.png", 
+        	"Desc": "后台管理系统基础功能(权限管理、用户管理、用户组管理)", 
+        	"Url": "#",
+        	"Src": "https://github.com/crazy-wolf/cms", 
+        	"Submitter": "CrazyWolf",
+        	"Date": "2016-09-04"
+		}
     ]
 }
