--- a/projects.json
+++ b/projects.json
@@ -386,6 +386,15 @@
         	"Src": "https://github.com/crazy-wolf/cms", 
         	"Submitter": "CrazyWolf",
         	"Date": "2016-09-04"
+		},
+		{
+        	"Name": "OPMS", 
+        	"Thumb": "opms/opms.png", 
+        	"Desc": "OPMS管理系统是意思是PMS+OA，项目+办公管理。符合日常项目和OA管理，特别适合扁平化管理的微中小企业。OPMS采用是Beego框架和Bootstrap前端框架构建立，适合不同平台，不同的终端，简单方便实用的原则。数据库采用Mysql，缓存采用Redis。在部署过程中，如果没有Redis，不影响使用。本系统是免费开源的软件，部署方便。", 
+        	"Url": "http://opms.demo.milu365.cn/",
+        	"Src": "https://github.com/lock-upme/OPMS", 
+        	"Submitter": "lock",
+        	"Date": "2016-09-12"
 		}
     ]
 }
