--- a/projects.json
+++ b/projects.json
@@ -426,8 +426,8 @@
         {
             "Name": "ERP系统,侧重进销存",
             "Thumb": "goERP/goERP.png",
-            "Desc": "基于beego开发的ERP系统",
-            "Url": "https://github.com/hexiaoyun128/ERP",
+            "Desc": "基于beego开发的ERP系统,用户名:admin,密码：cloudy",
+            "Url": "http://115.28.11.86:8888",
             "Src": "https://github.com/hexiaoyun128/ERP",
             "Submitter": "cloudy",
             "Date": "2017-02-23"
