--- a/projects.json
+++ b/projects.json
@@ -431,6 +431,15 @@
             "Src": "https://github.com/hexiaoyun128/ERP",
             "Submitter": "cloudy",
             "Date": "2017-02-23"
-        }
+        },
+				{
+			    "Name": "SoftRadius计费系统",
+	  			"Thumb": "softradius/thumb.png",
+			    "Desc": "基于beego开发的radius计费系统,用户名:admin,密码:admin", 
+			    "Url": "https://github.com/cuu/softradius_system", 
+			    "Src": "https://github.com/cuu/softradius_system", 
+			    "Submitter": "cuu",
+			    "Date": "2017-03-17"
+				}
     ]
 }
