--- a/projects.json
+++ b/projects.json
@@ -503,6 +503,15 @@
         "Src": "https://github.com/george518/PPGo_ApiAdmin",
         "Submitter": "GeorgeHao",
         "Date": "2017-10-11"
+    },
+    {
+        "Name": "SDRMS轻量级权限管理系统",
+        "Thumb": "sdrms/1.png",
+        "Desc": "基于Beego开发的易用、易扩展、界面友好的轻量级功能权限管理系统",
+        "Url": "http://blog.csdn.net/lhtzbj12/article/details/78847482",
+        "Src": "https://github.com/lhtzbj12/sdrms",
+        "Submitter": "lhtzbj12",
+        "Date": "2017-12-20"
     }     
     ]
 }
