--- a/projects.json
+++ b/projects.json
@@ -539,6 +539,15 @@
         "Src": "https://github.com/wsy555/wangsy.github.io",
         "Submitter": "wangsy",
         "Date": "2018-1-22"
+    },
+	    {
+       "Name": "晒宝网-国内专业的宝贝集散中心",
+        "Thumb": "www.sexbao.net/www.sexbao.net.png",
+        "Desc": "晒宝网专注分享有趣好玩的软件、专业性较强的行业文件和文档、最新国产电影、欧美大片电影下载和在线观看",
+        "Url": "https://www.sexbao.net",
+        "Src": "https://github.com/laymer110/laymer-cms",
+        "Submitter": "laymer110",
+        "Date": "2018-2-25"
     }
     ]
 }
