--- a/projects.json
+++ b/projects.json
@@ -548,6 +548,15 @@
         "Src": "https://github.com/rubinliudongpo/airad",
         "Submitter": "rubinliudongpo",
         "Date": "2018-4-05"
+    },
+    {
+        "Name": "PPGo-Job V2.2 新版定时任务管理器",
+        "Thumb": "PPGo_Job/demo2.png",
+        "Desc": "新版定时任务管理，beego+layui,RBAC,支持多服务器分发任务",
+        "Url": "http://www.haodaquan.com/topics/1",
+        "Src": "https://github.com/george518/PPGo_Job",
+        "Submitter": "GeorgeHao",
+        "Date": "2018-08-15"
     }
     ]
 }
